src/global.css
/* @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,700;1,500;1,700&display=swap'); */
:root {
	--bg-1: #242424;
	--bg-2: #121212;

	--fg-1: #afafaf;
	--fg-2: #8c8c8c;

	--h1: 2rem;
	--h2: 1.75rem;
	--p: 1.5rem;
}

* {
	font-family: 'Atkinson Hyperlegible', 'Raleway', sans-serif;
	color: var(--fg-1);
}

h1,
select {
	font-size: var(--h1);
}

h2 {
	font-size: var(--h2);
}

p,
span,
a {
	font-size: var(--p);
}

body {
	background-color: var(--bg-1);
}

code {
	padding: 12px;
}

/* ignore this please, it's so stupid it hurts */
code[data-theme='rose-pine'] > span > span {
	font-family: 'JetBrains Mono', monospace;
}

@media (prefers-color-scheme: light) {
	/* why didn't I think of this before */
	:root {
		--fg-1: #242424;
		--fg-2: #121212;

		--bg-1: #f8f8f8;
		--bg-2: #dfdfdf;
	}
}

